--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,19 +1,20 @@
-const Tech = require('../models/tech.model');
+<!-- views/pages/index.ejs -->
 
-exports.test = function (req, res) {
-    res.send('Greetings from the Test controller!');
-};
+<!DOCTYPE html>
+<html lang="en">
+<head>
+</head>
+<body class="container">
 
-exports.create = function (req, res) {
-    let tech = new Tech({
-        title: req.body.title,
-        content: req.body.content,
-        tags: req.body.tags
-    });
-    
-    tech.save().then(item => {
-        res.send("item " + item + " saved to database");
-    }).catch(err => {
-        res.status(400).send("unable to save object. error is " + err)
-    });
-};
+<header>
+</header>
+
+<main>
+    <p>This really be your lot</p>
+</main>
+
+<footer>
+</footer>
+
+</body>
+</html>
