Added first view

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,6 +11,10 @@
 
 <main>
     <p>This really be your lot</p>
+    
+    <% techItems.forEach(function(item) { %>
+        <%= item.title %>
+    <% }) %>
 </main>
 
 <footer>
